kubernetes/etcd-backup/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: etcd-backup
  name: etcd-backup-policy
specs:
  - endpointSelector:
      matchLabels: {}
    ingress:
      - {}
    egress:
      - {}
  - endpointSelector:
      matchLabels:
        app: etcd-backup
    egress:
      # allow dns connection
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - protocol: ANY
                port: "53"
            rules:
              dns:
                - matchName: talos.default.svc.cluster.local.
                - matchName: &s3 s3.us-east-005.backblazeb2.com
      # allow connection to master node
      - toEntities:
          - remote-node
      # allow connection to b2
      - toFQDNs:
          - matchName: *s3
        toPorts:
          - ports:
              - protocol: TCP
                port: "443"
